k8s/base/webserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: dockerconfigjson-secret
      containers:
        - name: webserver
          image: backend-image
          imagePullPolicy: Always
          resources: {}
          ports:
            - name: http
              containerPort: 80
          command: ["npm", "run", "serve"]
          env: &env
            - name: PORT
              value: "80"
            - name: DATABASE_URL
            - name: STORAGE_ACCESS_KEY
            - name: STORAGE_SECRET_KEY
            - name: STORAGE_ENDPOINT
            - name: STORAGE_PORT
            - name: STORAGE_BUCKET
